# PDE-Solver

./: pyproject.toml
mains/: simulator.py
npdes/: grid.py
npdes/models/: __init__.py  advection_diffusion.py  time_base.py
tests/: test_npdes.py
