[tool.poetry]
name = "npdes"
version = "1.1.0"
description = ""
authors = ["Omitted"]

[tool.poetry.dependencies]
python = "^3.6.1"
numpy = "^1.18.2"
matplotlib = "^3.2.1"
windows-curses = { version = "^2.1.0", markers = "sys_platform == 'win32'" }

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
